docs: finish deps-native cutover